@@ -534,7 +534,6 @@
       }
     },
 
-
   onEdit: function(){
     var row = this.getSelectionModel().getSelected();
     if (row){
