@@ -1,4 +1,9 @@
 class BookGrid < Netzke::Basepack::GridPanel
   js_property :title, "Books"
-  config :model => "Book"
+
+  def default_config
+    super.merge(
+      :model => "Book"
+    )
+  end
 end
