@@ -1,0 +1,22 @@
+class BookGridWithVirtualAttributes < Netzke::Basepack::GridPanel
+  js_property :title, "Books"
+
+  include BookPresentation
+
+  def default_config
+    super.merge(
+      :model => "Book",
+      :columns => default_fields_for_forms
+    )
+  end
+
+  def default_fields_for_forms
+    [
+      :title,
+      {:name => :author__first_name, :setter => author_first_name_setter},
+      :exemplars,
+      {:name => :in_abundance, :getter => in_abundance_getter}
+    ]
+  end
+
+end
